# witnessos-rogue-agent-audit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
audit/: __init__.py  __main__.py  scanner.py
audit/detectors/: __init__.py  environment_check.py  http_endpoint.py  network_analyzer.py  process_monitor.py
audit/reporters/: __init__.py  console_reporter.py  json_reporter.py  markdown_reporter.py
reports/: sample-audit-report.md
rules/: known-agent-patterns.yaml  suspicious-behaviors.yaml
tests/: test_scanner.py
