[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rogue-agent-audit"
version = "0.1.0"
description = "Diagnostic tool for detecting ungoverned, unregistered, or misbehaving AI agents in your environment"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rogue Agent Audit Contributors"},
]
keywords = [
    "ai-security",
    "agent-governance",
    "audit",
    "rogue-agent",
    "ai-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/narko4u/witnessos-rogue-agent-audit"
Documentation = "https://github.com/narko4u/witnessos-rogue-agent-audit#readme"
Issues = "https://github.com/narko4u/witnessos-rogue-agent-audit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.8",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["audit", "audit.*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
